--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack"
+    "build": "webpack",
+    "clean": "rm -rf ./dist"
   },
   "keywords": [],
   "author": "vsangk <vsangk@gmail.com> (https://github.com/vsangk)",
@@ -13,6 +14,7 @@
   "devDependencies": {
     "@types/node": "^12.7.1",
     "@types/webpack": "^4.32.1",
+    "html-webpack-plugin": "^3.2.0",
     "ts-loader": "^6.0.4",
     "ts-node": "^8.3.0",
     "typescript": "^3.5.3",
