--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack",
+    "build": "TS_NODE_PROJECT=\"tsconfig-for-webpack-config.json\" webpack",
     "clean": "rm -rf ./dist"
   },
   "keywords": [],
@@ -17,6 +17,7 @@
     "html-webpack-plugin": "^3.2.0",
     "ts-loader": "^6.0.4",
     "ts-node": "^8.3.0",
+    "tsconfig-paths": "^3.8.0",
     "typescript": "^3.5.3",
     "webpack": "^4.39.1",
     "webpack-cli": "^3.3.6"
